# ScienceWork

./: .gitignore  CMakeLists.txt  pbab.pro
GraphsPainting/: GraphsPainting.sln
GraphsPainting/GraphsPainting/: GraphsPainting.vcxproj  GraphsPainting.vcxproj.filters  input.txt  res.html  res2.html
TreeAlgsParallelization/: TreeAlgsParallelization.sln
TreeAlgsParallelization/Demonstration/: Demonstration.vcxproj  Demonstration.vcxproj.filters  res.html
TreeAlgsParallelization/GraphPainting/: GraphPainting.vcxproj  GraphPainting.vcxproj.filters  GraphPainting_Results.html
TreeAlgsParallelization/HTML_Logger/: HTML_Logger.vcxproj  (+1 more)
graph-paint-demo/: CMakeLists.txt  gen_new_paint.cpp  gpp_amputation.h  gpp_generator.h  graph.cpp
graph_paint_demo/: gpp_solver.h  gpp_structs.h  main.cpp
html-logger/: CMakeLists.txt  html_body.cpp  html_body.h  html_doc.cpp  html_doc.h  html_head.cpp  html_head.h  html_logger.cpp  html_logger.h  html_table.cpp  html_table.h  html_tag.cpp  html_tag.h
html_logger/: README.md  html_body.cpp  html_body.h  html_doc.cpp  html_doc.h  html_head.cpp  html_head.h  html_logger.cpp  html_logger.h  html_logger.pro  html_table.cpp  html_table.h  html_tag.cpp  html_tag.h
pbab/: CMakeLists.txt  pbab.pro  pbab_babsolver.hpp  pbab_solanalyzer.h  pbab_solanalyzer.hpp  pbab_solgenerator.h  pbab_solgenerator.hpp  pbab_solnode.hpp  pbab_solver.h  pbab_solver.hpp
sat-demo/: CMakeLists.txt  SATAmputation.h  SATProblemSolver.h  SATSubstitutionGenerator.cpp
sat_demo/: Expression.h  SATSubstitutionGenerator.h  SAT_Structures.h  sat-demo.pro
(+58 files in other folders)
